--- a/Portfolio/portfolio.ipynb
+++ b/Portfolio/portfolio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "SBUX  0.025124  0.045453  0.019480  0.021844  0.044845  0.139059  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,64 +742,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_return = (0.05 * mu.iloc[0] + 0.01*max(utility) +0.01*max(airline) + (1- 0.05 - 0.01  - 0.01)*max(mu))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "max expected at least 1 argument, got 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[74], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m max_return \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m0.05\u001b[39m \u001b[38;5;241m*\u001b[39m mu\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m0.2\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m0.05\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(tech)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.1\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(utility)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(retail)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.4\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(fig)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.05\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(airline)) \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m0.2\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mmax\u001b[39m(energy) \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.2\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.1\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.2\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.4\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.05\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.2\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: max expected at least 1 argument, got 0"
-     ]
-    }
-   ],
-   "source": [
-    "max_return = (0.05 * mu.iloc[0] + (0.2-0.05)*max(tech)+0.1*max(utility)+0.2*max(retail)+0.4*max(fig)+0.05*max(airline)) +0.2*max(energy) + (1 - 0.2 - 0.1 - 0.2 - 0.4 - 0.05 - 0.2)*max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.32075321581485505"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max_return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.100224018096924\n"
+      "2.017347574234009\n"
      ]
     }
    ],
@@ -818,10 +768,10 @@
     "ef = EfficientFrontier(mu, S)\n",
     "ef.add_sector_constraints(sector_mapper, sector_lower, sector_upper)\n",
     "ef.add_constraint(lambda x: x[0] == 0.05)\n",
-    "ef.add_constraint(lambda x: x[0] == 0.1)\n",
+    "ef.add_constraint(lambda x: x[1] == 0.1)\n",
     "start = time.time()\n",
     "ds = []\n",
-    "for rho in np.arange(0.001, 1.0, 0.001):\n",
+    "for rho in np.arange(1e-12, 1.0, 0.001):\n",
     "\tweights = ef.max_quadratic_utility(rho)\n",
     "\tds.append((2*rho - 1, [w for w in list(weights.values())]))\n",
     "end = time.time()\n",
@@ -848,18 +798,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-0.998,\n",
+       "(-0.999999999998,\n",
        " [0.05,\n",
+       "  0.1,\n",
        "  0.0,\n",
        "  0.0,\n",
-       "  0.0,\n",
-       "  0.15,\n",
+       "  0.05,\n",
        "  0.01,\n",
        "  0.0,\n",
        "  0.0,\n",
@@ -872,12 +822,12 @@
        "  0.0,\n",
        "  0.2,\n",
        "  0.4,\n",
-       "  0.1799999999999998,\n",
+       "  0.18,\n",
        "  0.0,\n",
        "  0.0])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +843,7 @@
    "outputs": [],
    "source": [
     "from pickle import dump\n",
-    "dump(ds, open(\"dataset_stock.pkl\", \"wb\"))"
+    "dump(ds, open(\"portfolio.pkl\", \"wb\"))"
    ]
   },
   {
