--- a/Preprint/Preprint.tex
+++ b/Preprint/Preprint.tex
@@ -341,10 +341,10 @@ be \(\mathcal{A}(\mathcal{J})\). The aggregator chosen is
 \paragraph{Evaluation}\label{evaluation-1}
 
 \subsection{Projection onto a convex
-polythope}\label{projection-onto-a-convex-polythope}
+polytope}\label{projection-onto-a-convex-polytope}
 
 A renewable energy generator in a power grid is used as a test case for
-this approach.. The generator's active and reactive power injections
+this approach. The generator's active and reactive power injections
 \((P,Q)\) are controllable, but they must adhere to physical
 constraints. As such, the desired setpoints \((a_P, a_Q)\) must be
 projected onto the feasible set defined by these constraints. This
@@ -358,8 +358,8 @@ defined by the physical parameters of the generator
 \(P^+_g \in ]0, \overline{P}_g]\),
 \(\overline{Q}_g \in \mathbb{R}_0^+\),
 \(Q^+_g \in ]0, \overline{Q}_g]\), characterizing the minimum and
-maximum possible values and the relationships between active and
-reactive power, and the dynamic value \(P^{\textrm{(max)}}_{g,t}\) which
+maximum possible values, the relationships between active and reactive
+power, and the dynamic value \(P^{\textrm{(max)}}_{g,t}\) which
 indicates the maximum power that can be generated at that time given the
 external conditions (e.g.~wind speed, solar radiation, etc.):
 \begin{equation}
