--- a/Projection/eval.ipynb
+++ b/Projection/eval.ipynb
@@ -600,7 +600,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "KKT-NN",
+   "display_name": "KKT_NN",
    "language": "python",
    "name": "python3"
   },
