--- a/Projection/projection.ipynb
+++ b/Projection/projection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,8 @@
     "\tq = 2*np.random.rand() - 1\n",
     "\tp_feas, q_feas, status = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
     "\tX = np.array([2.*p-1., q, 2.*(p_pot/p_max)-1., 2.*(p_max - 0.2)/0.8 - 1., 2.*(q_max - 0.2)/0.8 -1., 2.*(p_plus - 0.1)/(0.9*p_max - 0.1) -1., 2*(q_plus - 0.1)/(0.9*q_max - 0.1) - 1.])\n",
+    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus])\n",
+    "\n",
     "\ty = np.array([p_feas, q_feas])\n",
     "\n",
     "\tif status == 'optimal': ds.append([X, y])\n",
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +121,7 @@
     "\tq = 2*np.random.rand() - 1\n",
     "\tp_feas, q_feas, status = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
     "\tX = np.array([2.*p-1., q, 2.*(p_pot/p_max)-1., 2.*(p_max - 0.2)/0.8 - 1., 2.*(q_max - 0.2)/0.8 -1., 2.*(p_plus - 0.1)/(0.9*p_max - 0.1) -1., 2*(q_plus - 0.1)/(0.9*q_max - 0.1) - 1.])\n",
+    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus])\n",
     "\ty = np.array([p_feas, q_feas])\n",
     "\n",
     "\tif status == 'optimal':  ds.append([X, y])\n",
@@ -127,18 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([ 0.63868119,  0.85628106,  0.94805421, -0.75      , -0.75      ,\n",
-       "         0.17647059, -0.41176471]),\n",
-       " array([0.2, 0.3])]"
+       "[array([0.95071431, 0.46398788, 0.11236204, 0.3       , 0.3       ,\n",
+       "        0.2       , 0.15      ]),\n",
+       " array([0.11236204, 0.3       ])]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,12 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pickle import dump\n",
-    "dump(ds, open(\"projection.pkl\", \"wb\"))"
+    "dump(ds, open(\"../projection.pkl\", \"wb\"))"
    ]
   },
   {
