--- a/Projection/projection.ipynb
+++ b/Projection/projection.ipynb
@@ -85,8 +85,8 @@
     "\tp = np.random.rand()\n",
     "\tq = 2*np.random.rand() - 1\n",
     "\tp_feas, q_feas, status = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
-    "\tX = np.array([2.*p-1., q, 2.*(p_pot/p_max)-1., 2.*(p_max - 0.2)/0.8 - 1., 2.*(q_max - 0.2)/0.8 -1., 2.*(p_plus - 0.1)/(0.9*p_max - 0.1) -1., 2*(q_plus - 0.1)/(0.9*q_max - 0.1) - 1.])\n",
-    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus])\n",
+    "\tX = np.array([2.*p-1., q, 2.*(p_max - 0.2)/0.8 - 1., 2.*(q_max - 0.2)/0.8 -1., 2.*(p_pot/p_max)-1., 2.*(p_plus - 0.1)/(0.9*p_max - 0.1) -1., 2*(q_plus - 0.1)/(0.9*q_max - 0.1) - 1.])\n",
+    "\tX = np.array([p, q, p_max, q_max, p_pot, p_plus, q_plus])\n",
     "\n",
     "\ty = np.array([p_feas, q_feas])\n",
     "\n",
@@ -121,7 +121,8 @@
     "\tq = 2*np.random.rand() - 1\n",
     "\tp_feas, q_feas, status = loads(p, q, p_min, p_max, p_plus, p_pot, q_min, q_max, q_minus, q_plus)\n",
     "\tX = np.array([2.*p-1., q, 2.*(p_pot/p_max)-1., 2.*(p_max - 0.2)/0.8 - 1., 2.*(q_max - 0.2)/0.8 -1., 2.*(p_plus - 0.1)/(0.9*p_max - 0.1) -1., 2*(q_plus - 0.1)/(0.9*q_max - 0.1) - 1.])\n",
-    "\tX = np.array([p, q, p_pot, p_max, q_max, p_plus, q_plus])\n",
+    "\tX = np.array([2.*p-1., q, 2.*(p_max - 0.2)/0.8 - 1., 2.*(q_max - 0.2)/0.8 -1., 2.*(p_pot/p_max)-1., 2.*(p_plus - 0.1)/(0.9*p_max - 0.1) -1., 2*(q_plus - 0.1)/(0.9*q_max - 0.1) - 1.])\n",
+    "\tX = np.array([p, q, p_max, q_max, p_pot, p_plus, q_plus])\n",
     "\ty = np.array([p_feas, q_feas])\n",
     "\n",
     "\tif status == 'optimal':  ds.append([X, y])\n",
@@ -136,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "[array([0.95071431, 0.46398788, 0.11236204, 0.3       , 0.3       ,\n",
+       "[array([0.95071431, 0.46398788, 0.3       , 0.3       , 0.11236204,\n",
        "        0.2       , 0.15      ]),\n",
        " array([0.11236204, 0.3       ])]"
       ]
